--- a/src/components/Header.astro
+++ b/src/components/Header.astro
@@ -1,5 +1,12 @@
 ---
 ---
-<div>
-Header - tilføj navigation mm.
+<div class="p-4 flex flex-row justify-between">
+<h1 class="">portfolio 2024</h1>
+<ul class="flex flex-row gap-2">
+    <li> <a href="#">HOME</a></li>
+    <li> <a href="#">WEBSITES</a></li>
+    <li> <a href="#">GRAPHIC</a></li>
+    <li> <a href="#">PERSONAL</a></li>
+    <li> <a href="#">ABOUT</a></li>
+</ul>
 </div>
