--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -6,10 +6,24 @@ import { Image } from 'astro:assets';
 import thumbsup from "../assets/images/thumbsup.png";
 ---
 <MainLayout title="Titel">
-	<article>
+	<!-- <article>
 		<h1>Index overskrift</h1>
 		<Button>Klik!</Button>
 		<p>Link til <Link href="https://www.kea.dk" target="_blank">En anden side</Link></p>
 		<Image src={thumbsup} alt=""></Image>
+	</article> -->
+
+	<article id="hero">
+	<div class="left">
+			<h1></h1>
+			<img src="" alt="">
+			<h1></h1>
+			<h1></h1>
+	</div>
+
+	<div class="right"><img src="" alt=""></div>
+
+	
 	</article>
+
 </MainLayout>
