--- a/src/layouts/MainLayout.astro
+++ b/src/layouts/MainLayout.astro
@@ -12,10 +12,12 @@ const { title } = Astro.props;
 		<meta name="viewport" content="width=device-width" />
 		<meta name="generator" content={Astro.generator} />
 		<title>{Astro.props.title}</title>
+		<link rel="stylesheet" href="https://use.typekit.net/xdi1txo.css">
+		<link rel="stylesheet" href="https://use.typekit.net/xdi1txo.css">
 	</head>
 	<body>
 
-		<header>
+		<header class="w-full fixed z-50">
 			<Header></Header>
 		</header>
 		
