nytt försök lmao

--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -13,17 +13,77 @@ import thumbsup from "../assets/images/thumbsup.png";
 		<Image src={thumbsup} alt=""></Image>
 	</article> -->
 
-	<article id="hero">
-	<div class="left">
-			<h1></h1>
-			<img src="" alt="">
-			<h1></h1>
-			<h1></h1>
+	<article id="hero" class="h-screen relative">
+	<div class="left absolute bottom-5 left-3">
+			<h1 class="-mb-6 relative z-10">HELLO, I'M</h1>
+			<img class="h-52 -mb-6 -ml-4" src="hero2.png" alt="">
+			<h1 class="text-5xl">MMD STUDENT</h1>
+			<h1>FROM GOTHENBURG, SWEDEN</h1>
 	</div>
 
-	<div class="right"><img src="" alt=""></div>
-
-	
+	<div class="right absolute bottom-5 right-3">
+		<img class="h-[30rem]" src="9.webp" alt="">
+	</div>
 	</article>
+	<div class="flex justify-center my-4">
+		<div class="border-t w-1/2 border-black"></div>
+	  </div>
 
+
+	  <article class="h-screen relative">
+		<div class="p-4 flex flex-row justify-between ">
+			<p class="w-[25rem] text-xl">My name is <span class="font-bold">August Hasselblad.</span> <br> I am a 25-year-old <span class="font-bold">multimedia design</span> student at KEA in Copenhagen. I work part-time as a graphic designer and also create paintings.</p>
+			<ul class="text-s">
+				<li>København, Denmark</li>
+				<li>augu.brem@gmail.com</li>
+				<li>+46721770889</li>
+				<li><a href="instagram.com">instagram</a></li>
+			</ul>
+		</div>
+
+		<section class="mx-4 py-8 pt-40">
+  <div class="grid grid-cols-3 text-xl gap-20">
+    <div>
+      <h1 class="font-bold">PROFILE</h1>
+      <div class="lg:w-72">
+      	<p>I am passionate about composition and obsessed over colors. I am detail-oriented, communicative, and I'm always looking for opportunities to learn more.</p>
+	      <p>My areas of interest are <span class="font-bold">graphic and web design, web development, painting, screen printing,</span> and <span class="font-bold">drawing</span></p>
+      </div>
+    </div>
+    <div class="border-l border-black pl-4">
+      <h1 class="font-bold">EDUCATION</h1>
+      <ul>
+        <li>KEA - Multimedia design <br>2023-2025</li>
+        <li>Dômen Konstskola - Fine arts <br>2022-2023</li>
+      </ul>
+
+      <h1 class="font-bold pt-10">LANGUAGES</h1>
+      <ul>
+        <li><span class="font-bold">Swedish</span> - Native</li>
+        <li><span class="font-bold">English</span> - Fluent</li>
+        <li><span class="font-bold">Danish</span> - WIP</li>
+      </ul>
+    </div>
+    <div class="border-l border-black pl-4">
+      <h1 class="font-bold">SOFTWARE SKILLS</h1>
+      <ul>
+        <li>Adobe Photoshop</li>
+        <li>Adobe Illustrator</li>
+        <li>Adobe Premier Pro</li>
+        <li>Figma</li>
+        <li>HTML/CSS</li>
+        <li>Javascript</li>
+        <li>Tailwind CSS</li>
+        <li>Astro</li>
+        <li>Git / Github</li>
+        <li>Supabase</li>
+      </ul>
+    </div>
+  </div>
+</section>
+
+	  </article>
+	  <div class="flex justify-center my-4">
+		<div class="border-t w-1/2 border-black"></div>
+	  </div>
 </MainLayout>
