--- a/src/components/Header.astro
+++ b/src/components/Header.astro
@@ -1,6 +1,6 @@
 ---
 ---
-<div class="p-4 flex flex-row justify-between">
+<div class="p-4 flex flex-row justify-between bg-gradient-to-b from-white via-white/85 to-transparent">
 <h1 class="">portfolio 2024</h1>
 <ul class="flex flex-row gap-2">
     <li> <a href="#">HOME</a></li>
