--- a/src/components/Header.astro
+++ b/src/components/Header.astro
@@ -3,10 +3,10 @@
 <div class="p-4 flex flex-row justify-between bg-gradient-to-b from-white via-white/85 to-transparent">
 <h1 class="">portfolio 2024</h1>
 <ul class="flex flex-row gap-2">
-    <li> <a href="#">HOME</a></li>
-    <li> <a href="#">WEBSITES</a></li>
-    <li> <a href="#">GRAPHIC</a></li>
-    <li> <a href="#">PERSONAL</a></li>
-    <li> <a href="#">ABOUT</a></li>
+    <li> <a href="#hero">HOME</a></li>
+    <li> <a href="#websites">WEBSITES</a></li>
+    <li> <a href="#graphic">GRAPHIC</a></li>
+    <li> <a href="#projects3">PERSONAL</a></li>
+    <li> <a href="#about">ABOUT</a></li>
 </ul>
 </div>
