--- a/src/styles/tailwind.css
+++ b/src/styles/tailwind.css
@@ -2,6 +2,90 @@
 @tailwind components;
 @tailwind utilities;
 
-@layer base{
+@layer base {
+}
 
+@layer utilities {
+    .blink-1 {
+        -webkit-animation: blink-1 0.6s 3s both;
+                animation: blink-1 0.6s 3s both;
+    }
+
+    @-webkit-keyframes blink-1 {
+        0%,
+        50%,
+        100% {
+          opacity: 1;
+        }
+        25%,
+        75% {
+          opacity: 0;
+        }
+      }
+      @keyframes blink-1 {
+        0%,
+        50%,
+        100% {
+          opacity: 1;
+        }
+        25%,
+        75% {
+          opacity: 0;
+        }
+      }
+
+
+  .fade-in {
+    -webkit-animation: fade-in 2s ease-in both;
+    animation: fade-in 2s ease-in both;
+  }
+
+  .slide-top {
+    -webkit-animation: slide-top 0.6s cubic-bezier(0.55, 0.085, 0.68, 0.53) 0.2s both;
+    animation: slide-top 0.6s cubic-bezier(0.55, 0.085, 0.68, 0.53) 0.2s both;
+  }
+
+  @-webkit-keyframes slide-top {
+    0% {
+      -webkit-transform: translateY(100px); /* Start 100px below */
+      transform: translateY(100px); /* Start 100px below */
+      opacity: 0;
+    }
+    100% {
+      -webkit-transform: translateY(0); /* Move to final position */
+      transform: translateY(0); /* Move to final position */
+      opacity: 1;
+    }
+  }
+
+  @keyframes slide-top {
+    0% {
+      -webkit-transform: translateY(100px); /* Start 100px below */
+      transform: translateY(100px); /* Start 100px below */
+      opacity: 0;
+    }
+    100% {
+      -webkit-transform: translateY(0); /* Move to final position */
+      transform: translateY(0); /* Move to final position */
+      opacity: 1;
+    }
+  }
+
+  
+  @-webkit-keyframes fade-in {
+    0% {
+      opacity: 0;
+    }
+    100% {
+      opacity: 1;
+    }
+  }
+  @keyframes fade-in {
+    0% {
+      opacity: 0;
+    }
+    100% {
+      opacity: 1;
+    }
+  }
 }
