--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -225,15 +225,9 @@ import Flipbook from "../components/Flipbook.astro"
 		</div>
 		<article class="grid grid-cols-1 lg:grid-cols-12 overflow-hidden mx-auto ">
 			<img src="apx.png" alt="" class="m-2 lg:m-0  lg:object-cover transition-all lg:col-start-5 lg:col-span-2 lg:mt-20 lg:hover:scale-105" >
-			<div class="flex flex-col md:justify-center md:items-end items-start md:gap-5 gap-6 lg:col-start-10 lg:col-span-2">
-				<a href="2.webp" class="lightbox md:w-[365px] w-[95%] h-full ">
-					<img
-					  src="2.webp"
-					  alt="gothenburg hardcore punkband cover"
-					  class="shadow-xl mt-12 md:mt-0 hover:scale-105 transition duration-500"
-					/>
-				  </a>
-			</div>
+			
+			<img class="lg:col-start-10 lg:col-span-2" src="2.webp" alt="">
+			
 			<div class="m-2 lg:m-0 lg:object-cover transition-all lg:col-start-8 lg:col-span-2 lg:mt-20">
 				<div class="yaki-container slide">
 					<img src="yaki1.webp" alt="" class="yaki-main">
