--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -426,7 +426,7 @@ import Flipbook from "../components/Flipbook.astro"
   
 
 <script>
-    import gsap from "gsap";
+    import { gsap } from "gsap";
     
     // Select all the anchor elements with a class of "group" (your links)
     const links = document.querySelectorAll('a.relative.group');
