--- a/src/components/Header.astro
+++ b/src/components/Header.astro
@@ -1,7 +1,7 @@
 ---
 ---
 <div class="p-4 flex flex-row justify-between bg-gradient-to-b from-white via-white/85 to-transparent">
-<h1 class="">portfolio 2024</h1>
+<a href="#home"><h1 class="">portfolio 2024</h1></a>
 <ul class="flex flex-row gap-2">
     <li> <a href="#hero">HOME</a></li>
     <li> <a href="#websites">WEBSITES</a></li>
