--- a/src/components/Flipbook.astro
+++ b/src/components/Flipbook.astro
@@ -109,6 +109,7 @@ import p1_49 from '../assets/1p49.jpg';
 import p1_50 from '../assets/1p50.jpg';
 import p1_51 from '../assets/1p51.jpg';
 import p1_52 from '../assets/1p52.jpg';
+import p1_53f from '../assets/1p.jpg';
 import p1_53 from '../assets/1p53.jpg';
 import p1_54 from '../assets/1p54.jpg';
 import p1_55 from '../assets/1p55.jpg';
@@ -449,88 +450,88 @@ import p2_70 from '../assets/p2_70.jpg';
         <Image src={p1_52} alt="Image 1_52" />
       </div>
       <div class="back">
-        <Image src={p1_53} alt="Image 1_53" />
+        <Image src={p1_53f} alt="Image 1_53" />
       </div>
     </div>
   
     <div class="page">
       <div class="front">
-        <Image src={p1_54} alt="Image 1_54" />
+        <Image src={p1_53} alt="Image 1_54" />
       </div>
       <div class="back">
-        <Image src={p1_55} alt="Image 1_55" />
+        <Image src={p1_54} alt="Image 1_55" />
       </div>
     </div>
   
     <div class="page">
       <div class="front">
-        <Image src={p1_56} alt="Image 1_56" />
+        <Image src={p1_55} alt="Image 1_56" />
       </div>
       <div class="back">
-        <Image src={p1_57} alt="Image 1_57" />
+        <Image src={p1_56} alt="Image 1_57" />
       </div>
     </div>
   
     <div class="page">
       <div class="front">
-        <Image src={p1_58} alt="Image 1_58" />
+        <Image src={p1_57} alt="Image 1_58" />
       </div>
       <div class="back">
-        <Image src={p1_59} alt="Image 1_59" />
+        <Image src={p1_58} alt="Image 1_59" />
       </div>
     </div>
   
     <div class="page">
       <div class="front">
-        <Image src={p1_60} alt="Image 1_60" />
+        <Image src={p1_59} alt="Image 1_60" />
       </div>
       <div class="back">
-        <Image src={p1_61} alt="Image 1_61" />
+        <Image src={p1_60} alt="Image 1_61" />
       </div>
     </div>
   
     <div class="page">
       <div class="front">
-        <Image src={p1_62} alt="Image 1_62" />
+        <Image src={p1_61} alt="Image 1_62" />
       </div>
       <div class="back">
-        <Image src={p1_63} alt="Image 1_63" />
+        <Image src={p1_62} alt="Image 1_63" />
       </div>
     </div>
   
     <div class="page">
       <div class="front">
-        <Image src={p1_64} alt="Image 1_64" />
+        <Image src={p1_63} alt="Image 1_64" />
       </div>
       <div class="back">
-        <Image src={p1_65} alt="Image 1_65" />
+        <Image src={p1_64} alt="Image 1_65" />
       </div>
     </div>
   
     <div class="page">
       <div class="front">
-        <Image src={p1_66} alt="Image 1_66" />
+        <Image src={p1_65} alt="Image 1_66" />
       </div>
       <div class="back">
-        <Image src={p1_67} alt="Image 1_67" />
+        <Image src={p1_66} alt="Image 1_67" />
       </div>
     </div>
   
     <div class="page">
       <div class="front">
-        <Image src={p1_68} alt="Image 1_68" />
+        <Image src={p1_67} alt="Image 1_68" />
       </div>
       <div class="back">
-        <Image src={p1_69} alt="Image 1_69" />
+        <Image src={p1_68} alt="Image 1_69" />
       </div>
     </div>
   
     <div class="page">
       <div class="front">
-        <Image src={backImage1} alt="Back Image 1" />
+        <Image src={p1_69} alt="image 69" />
       </div>
       <div class="back">
-        <Image src={backImage} alt="Back Image" />
+        <Image src={backImage1} alt="Back Image" />
       </div>
     </div>
   </div>
